attached_assets/Pasted--workspace-gunicorn-bind-0-0-0-0-5000-workers-2-timeout-120-main-app-2025-05-29-13-16-15--1748524601705.txt
~/workspace$ gunicorn --bind 0.0.0.0:5000 --workers 2 --timeout 120 main:app
[2025-05-29 13:16:15 +0000] [9102] [INFO] Starting gunicorn 21.2.0
[2025-05-29 13:16:15 +0000] [9102] [INFO] Listening at: http://0.0.0.0:5000 (9102)
[2025-05-29 13:16:15 +0000] [9102] [INFO] Using worker: sync
[2025-05-29 13:16:15 +0000] [9107] [INFO] Booting worker with pid: 9107
[2025-05-29 13:16:15 +0000] [9108] [INFO] Booting worker with pid: 9108
[2025-05-29 13:16:16 +0000] [9102] [INFO] Handling signal: winch
[2025-05-29 13:16:16 +0000] [9108] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
    worker.init_process()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 134, in init_process
    self.load_wsgi()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 6, in <module>
    from app.backend import app
  File "/home/runner/workspace/app/backend.py", line 17, in <module>
    from app.utils.cardano import get_koios_client, CardanoUtils
  File "/home/runner/workspace/app/utils/cardano.py", line 155
    ```
    ^
SyntaxError: invalid syntax
[2025-05-29 13:16:16 +0000] [9107] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
    worker.init_process()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 134, in init_process
    self.load_wsgi()
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 6, in <module>
    from app.backend import app
  File "/home/runner/workspace/app/backend.py", line 17, in <module>
    from app.utils.cardano import get_koios_client, CardanoUtils
  File "/home/runner/workspace/app/utils/cardano.py", line 155
    ```
    ^
SyntaxError: invalid syntax
[2025-05-29 13:16:16 +0000] [9108] [INFO] Worker exiting (pid: 9108)
[2025-05-29 13:16:16 +0000] [9107] [INFO] Worker exiting (pid: 9107)
[2025-05-29 13:16:16 +0000] [9102] [ERROR] Worker (pid:9108) exited with code 3
[2025-05-29 13:16:16 +0000] [9102] [ERROR] Worker (pid:9107) was sent SIGTERM!
[2025-05-29 13:16:16 +0000] [9102] [ERROR] Shutting down: Master
[2025-05-29 13:16:16 +0000] [9102] [ERROR] Reason: Worker failed to boot.